# clip-rs

./: .rustfmt.toml  Cargo.toml  default.nix  readme.md  result  shell.nix
src/: args.rs  clipboard.rs  config.rs  main.rs
