[package]
name = "clip-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
atty = "0.2.14"
clap = { version = "4.0.26", features = ["derive"] }
directories = "4.0.1"
indexmap = { version = "1.9.2", features = ["serde"] }
serde = { version = "1.0.147", features = ["derive"] }
tempfile = "3.3.0"
toml = "0.5.9"
